# apex-ledger

./: .gitignore  README.md  TRP1 Challenge Week 5_ Agentic Event Store & Enterprise Audit Infrastructure.md  TRP1 Week5 Support Document_ The Ledger - Agentic Document-to-Decision Platform.md  pyproject.toml
scripts/: run_ui.py
src/: event_store.py
src/aggregates/: agent_session.py  loan_application.py
src/commands/: handlers.py
src/integrity/: audit_chain.py  gas_town.py
src/mcp/: errors.py  resources.py  server.py  tools.py
src/models/: events.py
src/projections/: agent_performance.py  application_summary.py  base.py  compliance_audit.py  daemon.py
src/ui/: app.py
src/ui/templates/: application.html  index.html
src/upcasting/: __init__.py  registry.py  upcasters.py
tests/: conftest.py  test_concurrency.py  test_gas_town.py  test_mcp_lifecycle.py  test_projection_resilience.py  test_upcasting.py
