[project]
name = "agentic-event-store"
version = "0.1.0"
description = "TRP1 Week 5: The Ledger (agentic event store & audit infrastructure)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary,pool]>=3.2.0",
  "pydantic>=2.7.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

